--- a/viikkoharkat/viikko8/tehtava1/styles.css
+++ b/viikkoharkat/viikko8/tehtava1/styles.css
@@ -1,19 +1,20 @@
 h1 {
     padding-left: 40%;
+    padding-top: 5%;
+    color: white;
 }
 table {
     padding-left: 5%;
+    padding-top: 3%;
 }
-th,td {
-    padding: 3.0em;
-}
-th {
-    font-size: large;
-    border: 2px solid black;
+td {
+    padding: 2.0em;
 }
 td {
     border: 1px solid black;
+    background-color: white;
+    color: black;
 }
 body {
-    background-color: blanchedalmond;
+    background-image: "https://images3.alphacoders.com/112/1122794.jpg";
 }
