Added chessboard, numbers not centered tho.

--- a/viikkoharkat/viikko8/tehtava1/styles.css
+++ b/viikkoharkat/viikko8/tehtava1/styles.css
@@ -4,17 +4,12 @@ h1 {
     color: white;
 }
 table {
-    padding-left: 5%;
-    padding-top: 3%;
+    background-size: 642px;
+    padding-right: 2.0em;
 }
 td {
-    padding: 2.0em;
-}
-td {
-    border: 1px solid black;
-    background-color: white;
-    color: black;
-}
-body {
-    background-image: "https://images3.alphacoders.com/112/1122794.jpg";
+    padding: 30px;
+    background-color: transparent;
+    color: red;
+    text-align: right;
 }
