--- a/loppuharjoitus/frontend/index.css
+++ b/loppuharjoitus/frontend/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
 
 h1 {
-  font-size: xx-large;
+  font-size: 500%;
 /*   text-shadow: 0 0 5px #f562ff, 0 0 15px #f562ff, 0 0 25px #f562ff,
     0 0 20px #f562ff, 0 0 30px #890092, 0 0 80px #890092, 0 0 80px #890092;
   color: #fccaff; */
@@ -11,10 +11,13 @@ h1 {
   text-align: center;
   animation: blink 8s infinite;
   -webkit-animation: blink 8s infinite;
+  margin-top:10%;
 }
 
 body {
   background-color: lightblue;
+  margin-left:25%;
+  margin-right: 25%;
 }
 
 @-webkit-keyframes blink {
