Added new html files

--- a/loppuharjoitus/frontend/slides.css
+++ b/loppuharjoitus/frontend/slides.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightblue;
-    margin-left:25%;
+    margin-left:10%;
     margin-right: 25%;
 } 
  
@@ -11,7 +11,9 @@ body {
   /* Position the image container (needed to position the left and right arrows) */
   .container {
     position: relative;
-    max-width: 400;
+    max-width: xx-small;
+    margin-left: 10%;
+    margin-right: 25%;
   }
   
   /* Hide the images by default */
