--- a/loppuharjoitus/frontend/index.css
+++ b/loppuharjoitus/frontend/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Sacramento&display=swap");
 
 h1 {
+  margin-top: 20%;
   font-size: 500%;
 /*   text-shadow: 0 0 5px #f562ff, 0 0 15px #f562ff, 0 0 25px #f562ff,
     0 0 20px #f562ff, 0 0 30px #890092, 0 0 80px #890092, 0 0 80px #890092;
@@ -62,4 +63,9 @@ body {
   text-shadow: 0 0 5px #ffa500, 0 0 15px #ffa500, 0 0 20px #ffa500, 0 0 40px #ffa500, 0 0 60px #ff0000, 0 0 10px #ff8d00, 0 0 98px #ff0000;
     color: #fff6a9;
   }
+}
+.navbar-nav {
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
 }
