--- a/loppuharjoitus/frontend/styles.css
+++ b/loppuharjoitus/frontend/styles.css
@@ -1,3 +1,8 @@
 body {
     background-color: lightblue;
-} 
+}
+.navbar-nav {
+    position: absolute;
+    left: 50%;
+    transform: translatex(-50%);
+}
