--- a/loppuharjoitus/frontend/styles.css
+++ b/loppuharjoitus/frontend/styles.css
@@ -20,7 +20,7 @@ select {
   font-weight: 500;
   letter-spacing: 0.01em;
   position: relative;
-  margin-top: 30px;
+  margin-left: 40%
 }
 button {
   background-color: orange;
@@ -34,6 +34,10 @@ button {
   letter-spacing: 0.01em;
   position: relative;
   margin-top: 30px;
-  margin-bottom: 30px;
-  margin-left: 40%;
+  margin-bottom: 40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+h1 {
+  text-align: center;
 }
